[package]
name = "novasmt"
version = "0.1.10-alpha.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Storage-agnostic, highly ergonomic sparse Merkle trees"
license = "ISC"
repository="https://github.com/themeliolabs/novasmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im= "15.0.0"
serde={ version = "1.0.126", features = ["derive"] }
bitvec="0.20.0"
# funty="<=1.1"
blake3= "0.3.8"
parking_lot= "0.11.1"

bytes={ version = "1.0.1", features = ["serde"] }
log= "0.4.14"
scopeguard= "1.1.0"
genawaiter= "0.99.1"
hex= "0.4.3"

[target.'cfg(fuzzing)'.dependencies]
honggfuzz= "0.5.54"
env_logger= "0.8.3"

[profile.release]
opt-level=3
debug=2
overflow-checks = true

[dev-dependencies]
criterion = "0.3.4"
env_logger= "0.8.3"

[[bench]]
name = "criterion"
harness = false
