[package]
name = "novasmt"
version = "0.2.20"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Storage-agnostic, highly ergonomic sparse Merkle trees"
license = "ISC"
repository="https://github.com/themeliolabs/novasmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={ version = "1.0.133", features = ["derive"] }
bitvec= "0.20.3"
# funty="<=1.1"
blake3= "1.2.0"
# parking_lot= "0.11.1" 

log= "0.4.14"
# scopeguard= "1.1.0"
genawaiter= "0.99.1"
hex= "0.4.3"
arrayref = "0.3.6"
dashmap = "4.0.0"
ethnum = "1.0.4"
replace_with = "0.1.7"
# replace_with = "0.1.7"
rayon="1.5"
rustc-hash = "1.1.0"
lru = "0.7.2"
itertools = "0.10.3"
bytes = "1.3.0"

[target.'cfg(fuzzing)'.dependencies]
honggfuzz= "0.5.54"
env_logger= "0.9.0"
backtrace="0.3"

[profile.release]
opt-level=3
debug=2
overflow-checks = true

[dev-dependencies]
criterion = "0.3.5"
env_logger= "0.9.0"
rayon= "1.5.1"
quickcheck= "1.0.3"
quickcheck_macros= "1.0.0"

# [[bench]]
# name = "criterion"
# harness = false
