[package]
name = "novasmt"
version = "0.3.0-alpha.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2024"
description="Storage-agnostic, highly ergonomic sparse Merkle trees"
license = "ISC"
repository="https://github.com/mel-project/novasmt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
arrayref = "0.3.6"
bitvec= "0.20.3"
blake3= "1.2.0"
bytes = "1.3.0"
dashmap = "4.0.0"
ethnum = "1.0.4"
genawaiter= "0.99.1"
hex= "0.4.3"
itertools = "0.10.3"
log= "0.4.14"
lru = "0.7.2"
rayon="1.5"
serde={ version = "1.0.133", features = ["derive"] }
thiserror = "2.0.12"

[target.'cfg(fuzzing)'.dependencies]
honggfuzz= "0.5.54"
env_logger= "0.9.0"
backtrace="0.3"

[profile.release]
opt-level=3
debug=2
overflow-checks = true

[dev-dependencies]
criterion = "0.3.5"
env_logger= "0.9.0"
rayon= "1.5.1"
# [[bench]]
# name = "criterion"
# harness = false
